<resources>
    <string name="app_name">homeWork_3.7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1">1</string>
    <string name="name">name</string>
    <string name="author">author</string>
    <string name="_0_00">0:00</string>
    <string name="talk_me_down">Talk Me Down</string>
    <string name="blue_neighbourhood">Blue Neighbourhood</string>
    <string name="text">text</string>
    <string name="todo">TODO</string>
</resources>