<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SecondFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/fragment_img"
        android:scaleType="fitXY"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/talk_me_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/name"
        android:layout_marginBottom="16dp"
        android:textSize="38sp"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_img"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/blue_neighbourhood"
        android:layout_marginStart="16dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>